# azure-pim-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/: azure-api.md
.github/workflows/: release.yml
chocolatey/: azure-pim-tui.nuspec
src/: app.rs  config.rs  event.rs  event_modal.rs  main.rs
src/client/: auth.rs  error.rs  graph_credential.rs  group.rs  mod.rs  models.rs  pim.rs
src/ui/: detail.rs  help.rs  layout.rs  mod.rs  modals.rs  role_list.rs  status_bar.rs
